--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNITY FITNESS</title>
   </head>
-  <body>
+  <body tabindex="-1">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
